[General] Remove redundant plugins in Gradle
We are now using Java 8! No more OpenJFX dependencies and whatnot!